TestSuite/errors/err0420.pas
//!Неверное количество параметров функции
function f(i: integer): boolean;
begin
  
end;
begin
  repeat
    
  until f;
end.